# course-work-mobile-development

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: .env  CMakeLists.txt  Dockerfile  app.py  conanfile.py  cxxprofile  prepare.sh
backend/source/: auth.cpp
database/init/: init.sql
frontend/: settings.gradle.kts
frontend/app/: build.gradle.kts
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/java/com/example/word/: CalendarAdapter.kt  CalendarFragment.kt  CalendarPagerAdapter.kt  MainActivity.kt  MonthFragment.kt  PageFragment.kt  SettingsFragment.kt  ViewPagerAdapter.kt  Word.kt  WordAdapter.kt  WordOfDayFragment.kt  WordsFragment.kt
frontend/app/src/main/res/drawable/: day_background.xml  ic_menu.xml  ic_star_empty.xml  ic_star_filled.xml
frontend/app/src/main/res/layout/: activity_main.xml  calendar_day_item.xml  fragment_calendar.xml  fragment_month.xml  fragment_page.xml  fragment_word_of_day.xml  fragment_words.xml  word_list_item.xml
frontend/app/src/main/res/menu/: drawer_menu.xml
frontend/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
frontend/app/src/main/res/values-night/: themes.xml
frontend/app/src/main/res/xml/: preferences.xml
frontend/gradle/: libs.versions.toml
frontend/gradle/wrapper/: gradle-wrapper.properties
server/: .dockerignore  CMakeLists.txt  Dockerfile.auth  conanfile.py  cxxprofile  docker-compose.yml
server/databases/postgresql/init/: init.sql
server/source/: auth.cpp  auth.hpp
